troubleshooting project visibility issues

--- a/portfolio/public/output.css
+++ b/portfolio/public/output.css
@@ -1067,6 +1067,10 @@ video {
   opacity: 0;
 }
 
+.opacity-5{
+  opacity: 0.05;
+}
+
 .transition{
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, -webkit-transform, -webkit-filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
@@ -1198,6 +1202,10 @@ body,
   border-color: rgb(253 204 73 / var(--tw-border-opacity));
 }
 
+.hover\:invisible:hover{
+  visibility: hidden;
+}
+
 .hover\:bg-blue:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(44 188 233 / var(--tw-bg-opacity));
@@ -1224,6 +1232,10 @@ body,
 
 .hover\:opacity-90:hover{
   opacity: 0.9;
+}
+
+.hover\:opacity-0:hover{
+  opacity: 0;
 }
 
 .hover\:saturate-200:hover{
